--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -14,6 +14,12 @@ import Head from 'next/head';
 
 #### V1.0.0-beta.10
 
+- Implemented Edit Select variant
+- Fixed Some editing bugs and change default styles for various editing modes
+- Fixed React Key warnings in body and cells
+
+#### V1.0.0-beta.10
+
 - Simplified Density Feature with just 3 modes
 - Swapped out Density Icons
 - Changed default opacity styles of header cell icons
