new useMantineReactTableHook beta 12

--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -12,6 +12,12 @@ import Head from 'next/head';
 
 ### V1
 
+#### V1.0.0-beta.12
+
+- New `useMantineReactTable` hook to replace `tableInstanceRef` prop (more to come on this)
+- **ALL** internal MRT components are now exported from `mantine-react-table`!
+- Renamed type `MantineReactTableProps` to `MRT_TableOptions`
+
 #### V1.0.0-beta.10
 
 - Implemented Edit Select variant
