--- a/apps/mantine-react-table-docs/pages/docs/guides/click-to-copy.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/click-to-copy.mdx
@@ -18,13 +18,13 @@ Mantine React Table has an easy-to-implement feature that allows a user to copy 
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={new Set(['enableClickToCopy', 'mantineCopyButtonProps'])}
+  onlyOptions={new Set(['enableClickToCopy', 'mantineCopyButtonProps'])}
 />
 
 ### Relevant Column Options
 
 <ColumnOptionsTable
-  onlyProps={new Set(['enableClickToCopy', 'mantineCopyButtonProps'])}
+  onlyOptions={new Set(['enableClickToCopy', 'mantineCopyButtonProps'])}
 />
 
 ### Enable Click to Copy Per Column
