--- a/apps/mantine-react-table-docs/pages/docs/guides/column-actions-menu.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-actions-menu.mdx
@@ -19,7 +19,7 @@ By default, Mantine React Table renders a column actions button for each column 
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'enableColumnActions',
       'mantineColumnActionsButtonProps',
@@ -31,7 +31,7 @@ By default, Mantine React Table renders a column actions button for each column 
 ### Relevant Column Options
 
 <ColumnOptionsTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'enableColumnActions',
       'mantineColumnActionsButtonProps',
