--- a/apps/mantine-react-table-docs/pages/docs/guides/column-filtering.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-filtering.mdx
@@ -23,7 +23,7 @@ Filtering is one of the most powerful features of Mantine React Table and is ena
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'columnFilterModeOptions',
       'enableColumnFilterModes',
@@ -50,7 +50,7 @@ Filtering is one of the most powerful features of Mantine React Table and is ena
 ### Relevant Column Options
 
 <ColumnOptionsTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'Filter',
       'columnFilterModeOptions',
@@ -67,7 +67,7 @@ Filtering is one of the most powerful features of Mantine React Table and is ena
 ### Relevant State Options
 
 <StateOptionsTable
-  onlyProps={new Set(['columnFilters', 'columnFilterFns', 'showColumnFilters'])}
+  onlyOptions={new Set(['columnFilters', 'columnFilterFns', 'showColumnFilters'])}
 />
 
 ### Disable Filtering Features
