--- a/apps/mantine-react-table-docs/pages/docs/guides/column-hiding.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-hiding.mdx
@@ -19,16 +19,16 @@ The column hiding feature is enabled by default and allows the user to hide data
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={new Set(['enableHiding', 'onColumnVisibilityChange'])}
+  onlyOptions={new Set(['enableHiding', 'onColumnVisibilityChange'])}
 />
 
 ### Relevant Column Options
 
-<ColumnOptionsTable onlyProps={new Set(['enableHiding'])} />
+<ColumnOptionsTable onlyOptions={new Set(['enableHiding'])} />
 
 ### Relevant State
 
-<StateOptionsTable onlyProps={new Set(['columnVisibility'])} />
+<StateOptionsTable onlyOptions={new Set(['columnVisibility'])} />
 
 ### Hide Some Columns by Default
 
