--- a/apps/mantine-react-table-docs/pages/docs/guides/column-resizing.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-resizing.mdx
@@ -20,7 +20,7 @@ Mantine React Table lets you easily change the default widths (sizes) of columns
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'columnResizeMode',
       'defaultColumn',
@@ -34,12 +34,12 @@ Mantine React Table lets you easily change the default widths (sizes) of columns
 ### Relevant Column Options
 
 <ColumnOptionsTable
-  onlyProps={new Set(['enableResizing', 'maxSize', 'minSize', 'size'])}
+  onlyOptions={new Set(['enableResizing', 'maxSize', 'minSize', 'size'])}
 />
 
 ### Relevant State
 
-<StateOptionsTable onlyProps={new Set(['columnSizing', 'columnSizingInfo'])} />
+<StateOptionsTable onlyOptions={new Set(['columnSizing', 'columnSizingInfo'])} />
 
 ### Change Default Column Widths
 
