--- a/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
@@ -26,7 +26,7 @@ Additionally, in one of the sections below, you will learn [how to customize and
 All props labeled `mantine...Props` get forwarded to Mantine components. Here is a list of all the props that are exposed in both the root props and column options.
 
 <RootPropTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'mantineBottomToolbarProps',
       'mantineExpandAllButtonProps',
@@ -68,7 +68,7 @@ All props labeled `mantine...Props` get forwarded to Mantine components. Here is
 Some of the column options expose the same props as above, but on a per column basis.
 
 <ColumnOptionsTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'mantineCopyButtonProps',
       'mantineEditTextInputProps',
