--- a/apps/mantine-react-table-docs/pages/docs/guides/density-toggle.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/density-toggle.mdx
@@ -18,12 +18,12 @@ Mantine React Table includes a density toggle button in the top toolbar by defau
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={new Set(['enableDensityToggle', 'onDensityChange'])}
+  onlyOptions={new Set(['enableDensityToggle', 'onDensityChange'])}
 />
 
 ### Relevant State
 
-<StateOptionsTable onlyProps={new Set(['density'])} />
+<StateOptionsTable onlyOptions={new Set(['density'])} />
 
 ### Default Density
 
