--- a/apps/mantine-react-table-docs/pages/docs/guides/detail-panel.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/detail-panel.mdx
@@ -23,7 +23,7 @@ If you are looking for how to expand multiple rows from a tree data structure, s
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'displayColumnDefOptions',
       'positionExpandColumn',
@@ -34,7 +34,7 @@ If you are looking for how to expand multiple rows from a tree data structure, s
 
 ### Relevant State
 
-<StateOptionsTable onlyProps={new Set(['expanded'])} />
+<StateOptionsTable onlyOptions={new Set(['expanded'])} />
 
 ### Render Detail Panel
 
