--- a/apps/mantine-react-table-docs/pages/docs/guides/editing.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/editing.mdx
@@ -24,7 +24,7 @@ There are 4 visually distinct editing modes to choose from, whether you want to 
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'editingMode',
       'enableEditing',
@@ -41,7 +41,7 @@ There are 4 visually distinct editing modes to choose from, whether you want to 
 ### Relevant Column Options
 
 <ColumnOptionsTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'editVariant',
       'enableEditing',
@@ -53,7 +53,7 @@ There are 4 visually distinct editing modes to choose from, whether you want to 
 
 ### Relevant State Options
 
-<StateOptionsTable onlyProps={new Set(['editingCell', 'editingRow'])} />
+<StateOptionsTable onlyOptions={new Set(['editingCell', 'editingRow'])} />
 
 ### Enable Editing
 
