--- a/apps/mantine-react-table-docs/pages/docs/guides/expanding-sub-rows.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/expanding-sub-rows.mdx
@@ -25,7 +25,7 @@ Mantine React Table has support for expanding sub-rows or tree data. This featur
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'autoResetExpanded',
       'data',
@@ -51,7 +51,7 @@ Mantine React Table has support for expanding sub-rows or tree data. This featur
 
 ### Relevant State Options
 
-<StateOptionsTable onlyProps={new Set(['expanded'])} />
+<StateOptionsTable onlyOptions={new Set(['expanded'])} />
 
 ### Enable Expanding Sub-Rows
 
