--- a/apps/mantine-react-table-docs/pages/docs/guides/full-screen-toggle.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/full-screen-toggle.mdx
@@ -15,12 +15,12 @@ import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={new Set(['enableFullScreenToggle', 'onIsFullScreenChange'])}
+  onlyOptions={new Set(['enableFullScreenToggle', 'onIsFullScreenChange'])}
 />
 
 ### Relevant State
 
-<StateOptionsTable onlyProps={new Set(['isFullScreen'])} />
+<StateOptionsTable onlyOptions={new Set(['isFullScreen'])} />
 
 ### Disable Full Screen Toggle
 
