--- a/apps/mantine-react-table-docs/pages/docs/guides/localization.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/localization.mdx
@@ -16,7 +16,7 @@ Mantine React Table has full support for localization (i18n). Some locales are i
 
 ### Relevant Props
 
-<RootPropTable onlyProps={new Set(['localization'])} />
+<RootPropTable onlyOptions={new Set(['localization'])} />
 
 ### Built-in Locales
 
