--- a/apps/mantine-react-table-docs/pages/docs/guides/row-numbers.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/row-numbers.mdx
@@ -17,7 +17,7 @@ Mantine React Table has an easy to implement row number features. There are two 
 
 ### Relevant Props
 
-<RootPropTable onlyProps={new Set(['enableRowNumbers', 'rowNumberMode'])} />
+<RootPropTable onlyOptions={new Set(['enableRowNumbers', 'rowNumberMode'])} />
 
 ### Enable Row Numbers (Original Mode)
 
