--- a/apps/mantine-react-table-docs/pages/docs/guides/row-ordering-dnd.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/row-ordering-dnd.mdx
@@ -21,7 +21,7 @@ Mantine React Table has exposes all the APIs necessary to enable rich row drag a
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'enableRowOrdering',
       'mantineRowDragHandleProps',
@@ -33,7 +33,7 @@ Mantine React Table has exposes all the APIs necessary to enable rich row drag a
 
 ### Relevant State
 
-<StateOptionsTable onlyProps={new Set(['draggingRow', 'hoveredRow'])} />
+<StateOptionsTable onlyOptions={new Set(['draggingRow', 'hoveredRow'])} />
 
 ### Enable Row Ordering
 
