--- a/apps/mantine-react-table-docs/pages/docs/guides/sorting.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/sorting.mdx
@@ -20,7 +20,7 @@ Mantine React Table supports almost any sorting scenario you may have. Client-si
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'enableGlobalFilterRankedResults',
       'enableMultiSort',
@@ -40,7 +40,7 @@ Mantine React Table supports almost any sorting scenario you may have. Client-si
 ### Relevant Column Options
 
 <ColumnOptionsTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'enableMultiSort',
       'enableSorting',
@@ -54,7 +54,7 @@ Mantine React Table supports almost any sorting scenario you may have. Client-si
 
 ### Relevant State Options
 
-<StateOptionsTable onlyProps={new Set(['sorting'])} />
+<StateOptionsTable onlyOptions={new Set(['sorting'])} />
 
 ### Disable Sorting
 
