--- a/apps/mantine-react-table-docs/pages/docs/guides/state-management.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/state-management.mdx
@@ -22,7 +22,7 @@ See the [State Options API Docs](/docs/api/state-options) for more information o
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={new Set(['initialState', 'state', 'tableInstanceRef'])}
+  onlyOptions={new Set(['initialState', 'state', 'tableInstanceRef'])}
 />
 
 ### Populate Initial State
