--- a/apps/mantine-react-table-docs/pages/docs/guides/sticky-header-footer.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/sticky-header-footer.mdx
@@ -17,7 +17,7 @@ The sticky header and footer feature allows you to keep the header and footer of
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={new Set(['enableStickyHeader', 'enableStickyFooter'])}
+  onlyOptions={new Set(['enableStickyHeader', 'enableStickyFooter'])}
 />
 
 ### Enable Sticky Header
