--- a/apps/mantine-react-table-docs/pages/docs/guides/toolbar-customization.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/toolbar-customization.mdx
@@ -20,7 +20,7 @@ This guide shows you how to [hide](#hide-or-disable-toolbars), [customize](#cust
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'enableBottomToolbar',
       'enableToolbarInternalActions',
@@ -46,7 +46,7 @@ This guide shows you how to [hide](#hide-or-disable-toolbars), [customize](#cust
 ### Relevant State
 
 <StateOptionsTable
-  onlyProps={new Set(['showAlertBanner', 'showProgressBars'])}
+  onlyOptions={new Set(['showAlertBanner', 'showProgressBars'])}
 />
 
 ### Hide or Disable Toolbars
