--- a/apps/mantine-react-table-docs/pages/docs/guides/virtualization.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/virtualization.mdx
@@ -20,7 +20,7 @@ Virtualization is useful when you have a lot of data you want to display client-
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'columnVirtualizerInstanceRef',
       'columnVirtualizerProps',
