--- a/apps/mantine-react-table-docs/pages/docs/api/cell-instance-apis.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/api/cell-instance-apis.mdx
@@ -42,19 +42,17 @@ const columns = [
   },
 ];
 
-return (
-  <MantineReactTable
-    columns={columns}
-    data={data}
-    //or in callback props like this
-    mantineEditTextInputProps={({ cell }) => ({
-      disabled: cell.getValue() === 'admin',
-    })}
-  />
-);
-```
+const table = useMantineReactTable({
+  columns,
+  data,
+  //or in the table options callbacks like this
+  mantineEditTextInputProps: ({ cell }) => ({
+    disabled: cell.getValue() === 'admin',
+  }),
+});
 
-> NOTE: These are NOT [props](/docs/api/props) or [column options](/docs/api/column-options) for Mantine React Table. These are just static methods on a cell instance that you can use.
+return <MantineReactTable table={table} />;
+```
 
 <CellInstanceAPIsTable />
 
