--- a/apps/mantine-react-table-docs/pages/docs/api/column-options.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/api/column-options.mdx
@@ -24,7 +24,7 @@ import SourceCode from '../../../components/prop-tables/ColumnOptionsSource';
 
 Here is a list of all the column options you can specify in a `column` definition.
 
-```tsx
+```jsx
 const columns = useMemo(
   () => [
     {
@@ -36,7 +36,12 @@ const columns = useMemo(
   [],
 );
 
-return <MantineReactTable columns={columns} data={data} />;
+const table = useMantineReactTable({
+  columns,
+  data,
+});
+
+return <MantineReactTable table={table} />;
 ```
 
 <ColumnOptionsTable />
