--- a/apps/mantine-react-table-docs/pages/docs/guides/async-loading.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/async-loading.mdx
@@ -22,7 +22,7 @@ While you are fetching your data, you may want to show some loading indicators. 
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={
+  onlyOptions={
     new Set(['mantineSkeletonProps', 'mantineProgressProps'])
   }
 />
@@ -30,7 +30,7 @@ While you are fetching your data, you may want to show some loading indicators. 
 ### Relevant State Options
 
 <StateOptionsTable
-  onlyProps={new Set(['isLoading', 'showSkeletons', 'showProgressBars'])}
+  onlyOptions={new Set(['isLoading', 'showSkeletons', 'showProgressBars'])}
 />
 
 ### isLoading UI
