--- a/apps/mantine-react-table-docs/pages/docs/guides/column-ordering-dnd.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-ordering-dnd.mdx
@@ -19,7 +19,7 @@ Whether you just want to change the default column order in your table or let co
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'enableColumnDragging',
       'enableColumnOrdering',
@@ -33,13 +33,13 @@ Whether you just want to change the default column order in your table or let co
 ### Relevant Column Options
 
 <ColumnOptionsTable
-  onlyProps={new Set(['enableColumnDragging', 'enableColumnOrdering'])}
+  onlyOptions={new Set(['enableColumnDragging', 'enableColumnOrdering'])}
 />
 
 ### Relevant State
 
 <StateOptionsTable
-  onlyProps={new Set(['columnOrder', 'draggingColumn', 'hoveredColumn'])}
+  onlyOptions={new Set(['columnOrder', 'draggingColumn', 'hoveredColumn'])}
 />
 
 ### Change the Default Column Order
