--- a/apps/mantine-react-table-docs/pages/docs/guides/column-pinning.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-pinning.mdx
@@ -19,16 +19,16 @@ Column pinning is a cool feature that lets users pin (freeze) columns to the lef
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={new Set(['enablePinning', 'onColumnPinningChange'])}
+  onlyOptions={new Set(['enablePinning', 'onColumnPinningChange'])}
 />
 
 ### Relevant Column Options
 
-<ColumnOptionsTable onlyProps={new Set(['enablePinning'])} />
+<ColumnOptionsTable onlyOptions={new Set(['enablePinning'])} />
 
 ### Relevant State
 
-<StateOptionsTable onlyProps={new Set(['columnPinning'])} />
+<StateOptionsTable onlyOptions={new Set(['columnPinning'])} />
 
 ### Enable Column Pinning
 
