--- a/apps/mantine-react-table-docs/pages/docs/guides/custom-icons.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/custom-icons.mdx
@@ -18,7 +18,7 @@ If you need to, you can customize and replace some or all of the icons with your
 
 ### Relevant Props
 
-<RootPropTable onlyProps={new Set(['icons'])} />
+<RootPropTable onlyOptions={new Set(['icons'])} />
 
 ### Replace with Custom Icons
 
