--- a/apps/mantine-react-table-docs/pages/docs/guides/global-filtering.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/global-filtering.mdx
@@ -22,7 +22,7 @@ Mantine React Table has a powerful built-in global filtering (search) feature th
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'enableFilterMatchHighlighting',
       'enableGlobalFilter',
@@ -44,12 +44,12 @@ Mantine React Table has a powerful built-in global filtering (search) feature th
 
 ### Relevant Column Options
 
-<ColumnOptionsTable onlyProps={new Set(['enableGlobalFilter'])} />
+<ColumnOptionsTable onlyOptions={new Set(['enableGlobalFilter'])} />
 
 ### Relevant State Options
 
 <StateOptionsTable
-  onlyProps={new Set(['globalFilter', 'globalFilterFn', 'showGlobalFilter'])}
+  onlyOptions={new Set(['globalFilter', 'globalFilterFn', 'showGlobalFilter'])}
 />
 
 ### Disable Global Filtering
