--- a/apps/mantine-react-table-docs/pages/docs/guides/pagination.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/pagination.mdx
@@ -18,7 +18,7 @@ Client-side pagination is enabled by default in Mantine React Table. There are a
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'autoResetPagination',
       'enablePagination',
@@ -36,7 +36,7 @@ Client-side pagination is enabled by default in Mantine React Table. There are a
 
 ### Relevant State Options
 
-<StateOptionsTable onlyProps={new Set(['pagination'])} />
+<StateOptionsTable onlyOptions={new Set(['pagination'])} />
 
 ### Disable Pagination
 
