--- a/apps/mantine-react-table-docs/pages/docs/guides/row-actions.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/row-actions.mdx
@@ -18,7 +18,7 @@ Using the built-in Row Actions column is optional, as you can just simply create
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'displayColumnDefOptions',
       'enableRowActions',
