--- a/apps/mantine-react-table-docs/pages/docs/guides/row-selection.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/row-selection.mdx
@@ -21,7 +21,7 @@ Mantine React Table has a built-in row-selection feature and makes it easy to ma
 ### Relevant Props
 
 <RootPropTable
-  onlyProps={
+  onlyOptions={
     new Set([
       'enableMultiRowSelection',
       'enableRowSelection',
@@ -39,7 +39,7 @@ Mantine React Table has a built-in row-selection feature and makes it easy to ma
 
 ### Relevant State
 
-<StateOptionsTable onlyProps={new Set(['rowSelection'])} />
+<StateOptionsTable onlyOptions={new Set(['rowSelection'])} />
 
 ### Enable Row Selection
 
