table option table name

--- a/apps/mantine-react-table-docs/pages/docs/guides/aggregation-and-grouping.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/aggregation-and-grouping.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import AggregationExample from '../../../examples/aggregation-and-grouping';
@@ -21,7 +21,7 @@ Mantine React Table has built-in grouping and aggregation features. There are op
 
 ### Relevant Props
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={
     new Set([
       'aggregationFns',
