--- a/apps/mantine-react-table-docs/pages/docs/guides/async-loading.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/async-loading.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import LoadingExample from '../../../examples/loading';
 import ProgressExample from '../../../examples/progress';
@@ -21,7 +21,7 @@ While you are fetching your data, you may want to show some loading indicators. 
 
 ### Relevant Props
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={
     new Set(['mantineSkeletonProps', 'mantineProgressProps'])
   }
