--- a/apps/mantine-react-table-docs/pages/docs/guides/column-actions-menu.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-actions-menu.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
 import DisableExample from '../../../examples/disable-column-actions';
 import ColumnActionsSpaceExample from '../../../examples/column-actions-space';
@@ -18,7 +18,7 @@ By default, Mantine React Table renders a column actions button for each column 
 
 ### Relevant Props
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={
     new Set([
       'enableColumnActions',
