--- a/apps/mantine-react-table-docs/pages/docs/guides/column-hiding.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-hiding.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import Example from '../../../examples/disable-column-hiding';
@@ -18,7 +18,7 @@ The column hiding feature is enabled by default and allows the user to hide data
 
 ### Relevant Props
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={new Set(['enableHiding', 'onColumnVisibilityChange'])}
 />
 
