--- a/apps/mantine-react-table-docs/pages/docs/guides/column-ordering-dnd.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-ordering-dnd.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import DNDExample from '../../../examples/enable-column-ordering';
@@ -18,7 +18,7 @@ Whether you just want to change the default column order in your table or let co
 
 ### Relevant Props
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={
     new Set([
       'enableColumnDragging',
