--- a/apps/mantine-react-table-docs/pages/docs/guides/column-resizing.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-resizing.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import Example from '../../../examples/enable-column-resizing';
@@ -19,7 +19,7 @@ Mantine React Table lets you easily change the default widths (sizes) of columns
 
 ### Relevant Props
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={
     new Set([
       'columnResizeMode',
