--- a/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/customize-components.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
 import ThemeExample from '../../../examples/mantine-theme';
 import CustomizeStylesExample from '../../../examples/customize-table-styles';
@@ -25,7 +25,7 @@ Additionally, in one of the sections below, you will learn [how to customize and
 
 All props labeled `mantine...Props` get forwarded to Mantine components. Here is a list of all the props that are exposed in both the root props and column options.
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={
     new Set([
       'mantineBottomToolbarProps',
