--- a/apps/mantine-react-table-docs/pages/docs/guides/density-toggle.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/density-toggle.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import DisableExample from '../../../examples/disable-density-toggle';
 
@@ -17,7 +17,7 @@ Mantine React Table includes a density toggle button in the top toolbar by defau
 
 ### Relevant Props
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={new Set(['enableDensityToggle', 'onDensityChange'])}
 />
 
