--- a/apps/mantine-react-table-docs/pages/docs/guides/detail-panel.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/detail-panel.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import Example from '../../../examples/enable-detail-panel';
 import AlternateExample from '../../../examples/alternate-detail-panel';
@@ -22,7 +22,7 @@ If you are looking for how to expand multiple rows from a tree data structure, s
 
 ### Relevant Props
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={
     new Set([
       'displayColumnDefOptions',
