--- a/apps/mantine-react-table-docs/pages/docs/guides/expanding-sub-rows.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/expanding-sub-rows.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import EnableExample from '../../../examples/enable-expanding-tree';
@@ -24,7 +24,7 @@ Mantine React Table has support for expanding sub-rows or tree data. This featur
 
 ### Relevant Props
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={
     new Set([
       'autoResetExpanded',
