--- a/apps/mantine-react-table-docs/pages/docs/guides/full-screen-toggle.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/full-screen-toggle.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 
 <Head>
@@ -14,7 +14,7 @@ import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable
 
 ### Relevant Props
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={new Set(['enableFullScreenToggle', 'onIsFullScreenChange'])}
 />
 
