--- a/apps/mantine-react-table-docs/pages/docs/guides/localization.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/localization.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import LocaleExamples from '../../../example-groups/LocaleExamples';
 
 <Head>
@@ -16,7 +16,7 @@ Mantine React Table has full support for localization (i18n). Some locales are i
 
 ### Relevant Props
 
-<RootPropTable onlyOptions={new Set(['localization'])} />
+<TableOptionTable onlyOptions={new Set(['localization'])} />
 
 ### Built-in Locales
 
