--- a/apps/mantine-react-table-docs/pages/docs/guides/row-actions.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/row-actions.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 
 <Head>
   <title>Row Actions Feature Guide - Mantine React Table Docs</title>
@@ -17,7 +17,7 @@ Using the built-in Row Actions column is optional, as you can just simply create
 
 ### Relevant Props
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={
     new Set([
       'displayColumnDefOptions',
