--- a/apps/mantine-react-table-docs/pages/docs/guides/row-numbers.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/row-numbers.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import OriginalExample from '../../../examples/enable-row-numbers-original';
 import StaticExample from '../../../examples/enable-row-numbers-static';
 
@@ -17,7 +17,7 @@ Mantine React Table has an easy to implement row number features. There are two 
 
 ### Relevant Props
 
-<RootPropTable onlyOptions={new Set(['enableRowNumbers', 'rowNumberMode'])} />
+<TableOptionTable onlyOptions={new Set(['enableRowNumbers', 'rowNumberMode'])} />
 
 ### Enable Row Numbers (Original Mode)
 
