--- a/apps/mantine-react-table-docs/pages/docs/guides/row-ordering-dnd.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/row-ordering-dnd.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import EnableOrderingExample from '../../../examples/enable-row-ordering';
 import EnableDraggingExample from '../../../examples/enable-row-dragging';
@@ -20,7 +20,7 @@ Mantine React Table has exposes all the APIs necessary to enable rich row drag a
 
 ### Relevant Props
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={
     new Set([
       'enableRowOrdering',
