--- a/apps/mantine-react-table-docs/pages/docs/guides/sorting.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/sorting.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import MultiSortingExample from '../../../examples/multi-sorting';
@@ -19,7 +19,7 @@ Mantine React Table supports almost any sorting scenario you may have. Client-si
 
 ### Relevant Props
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={
     new Set([
       'enableGlobalFilterRankedResults',
