--- a/apps/mantine-react-table-docs/pages/docs/guides/state-management.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/state-management.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import RowSelectionExample from '../../../examples/enable-row-selection';
 import PersistentStateExample from '../../../examples/persistent-state';
 
@@ -21,7 +21,7 @@ See the [State Options API Docs](/docs/api/state-options) for more information o
 
 ### Relevant Props
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={new Set(['initialState', 'state', 'tableInstanceRef'])}
 />
 
