--- a/apps/mantine-react-table-docs/pages/docs/guides/sticky-header-footer.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/sticky-header-footer.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import EnableExample from '../../../examples/enable-sticky-header';
 
 <Head>
@@ -16,7 +16,7 @@ The sticky header and footer feature allows you to keep the header and footer of
 
 ### Relevant Props
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={new Set(['enableStickyHeader', 'enableStickyFooter'])}
 />
 
