--- a/apps/mantine-react-table-docs/pages/docs/guides/virtualization.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/virtualization.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import EnableRowExample from '../../../examples/enable-row-virtualization';
 import EnableColumnExample from '../../../examples/enable-column-virtualization';
 
@@ -19,7 +19,7 @@ Virtualization is useful when you have a lot of data you want to display client-
 
 ### Relevant Props
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={
     new Set([
       'columnVirtualizerInstanceRef',
