--- a/apps/mantine-react-table-docs/pages/docs/api/table-options.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/api/table-options.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/TableOptionsTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionsTable';
 import SourceCode from '../../../components/prop-tables/TableOptionsSource';
 
 <Head>
@@ -34,6 +34,6 @@ const table = useMantineReactTable({
 return <MantineReactTable table={table} />;
 ```
 
-<RootPropTable />
+<TableOptionTable />
 
 <SourceCode />
