--- a/apps/mantine-react-table-docs/pages/docs/guides/pagination.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/pagination.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import RemoteExample from '../../../examples/remote';
 
@@ -17,7 +17,7 @@ Client-side pagination is enabled by default in Mantine React Table. There are a
 
 ### Relevant Props
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={
     new Set([
       'autoResetPagination',
