--- a/apps/mantine-react-table-docs/pages/docs/guides/toolbar-customization.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/toolbar-customization.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import RootPropTable from '../../../components/prop-tables/RootPropTable';
+import TableOptionTable from '../../../components/prop-tables/TableOptionTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import DisableExample from '../../../examples/minimal';
 import CustomTopToolbarExample from '../../../examples/custom-top-toolbar';
@@ -19,7 +19,7 @@ This guide shows you how to [hide](#hide-or-disable-toolbars), [customize](#cust
 
 ### Relevant Props
 
-<RootPropTable
+<TableOptionTable
   onlyOptions={
     new Set([
       'enableBottomToolbar',
